<resources>
    <string name="app_name">SportTime</string>
    <string name="takePhoto">Insert photo</string>
    <string name="saveIcon">Save</string>
    <string name="editIcon">Edit</string>
    <string name="pictureDescription">Profile picture</string>
    <string name="fullName">Name Surname</string>
    <string name="nickname">Nickname</string>
    <string name="achievements">Achievements</string>
    <string name="profileLabel">Profile</string>
    <string name="ageLabel">Age: </string>
    <string name="age">Age</string>
    <string name="genderLabel">Gender: </string>
    <string name="gender">Non-specified</string>
    <string name="locationLabel">Location: </string>
    <string name="location">Location</string>
    <string name="sportsLabel">Sports</string>
    <string name="expertLabel">Expert</string>
    <string name="intermediateLabel">Intermediate</string>
    <string name="beginnerLabel">Beginner</string>
    <string name="availabilityLabel">Availability</string>
    <string name="serviceLabel">Available services</string>
    <string name="mondayLabel">Monday</string>
    <string name="tuesdayLabel">Tuesday</string>
    <string name="wednesdayLabel">Wednesday</string>
    <string name="thursdayLabel">Thursday</string>
    <string name="fridayLabel">Friday</string>
    <string name="saturdayLabel">Saturday</string>
    <string name="sundayLabel">Sunday</string>
    <string name="contactsLabel">Contacts</string>
    <string name="emailLabel">Email: </string>
    <string name="phoneLabel">Phone Number: </string>
    <string name="cameraPermission">Hi, we will request CAMERA permission. This is required for taking the photo from camera, please grant it.</string>
    <string name="change">Change</string>
    <string name="lightingService">Lighting</string>
    <string name="heatingService">Heating</string>
    <string name="equipmentService">Equipment</string>
    <string name="lockerRoomService">Locker Room</string>
    <string name="credentials">Credentials</string>
    <string name="personalInformation">Personal Information</string>
    <string name="contacts">Contacts</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="genderArray">
        <item>Non-specified</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="sportArray">
        <item>Basket</item>
        <item>Football</item>
        <item>Ping Pong</item>
        <item>Volley</item>
    </string-array>
    <string-array name="sportLevelArray">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="favourite_sport">Favourite Sport</string>
    <string name="birthdate">Birthdate</string>
    <string name="non_specified">Non-specified</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="browse">Free slots</string>
    <string name="sportTime">SportTime</string>
    <string name="hello_blank_fragment">TODO</string>
    <string name="reservationsLabel">Reservations</string>
    <string name="noReservations">No reservation or free slot found for this day, try another one!</string>
    <string name="noFreeSlots">No free reservation slots found for this day, try another one!</string>
    <string name="services">Services</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="createReview">Create review</string>
    <string name="freeSlotsLabel">Free Slots</string>
    <string name="feedBackIcon">feedback</string>
    <string name="oldReservations">Past reservations</string>
    <string name="skills">Skills</string>
    <string name="mondayInitials">Mo</string>
    <string name="tuesdayInitials">Tu</string>
    <string name="wednesdayInitials">We</string>
    <string name="thursdayInitials">Th</string>
    <string name="fridayInitials">Fr</string>
    <string name="saturdayInitials">Sa</string>
    <string name="sundayInitials">Su</string>

    <string name="reviewTitle">Your review for this playground</string>
    <string name="noOldReservations">It seems you never participated to any activity</string>
    <string name="writeReviewHere">Write here your review</string>
    <string name="submitReview">Submit review</string>
    <string name="add_skill">Add Skill</string>
    <string name="sport_skills">Sport skills</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="action_register">Register</string>
    <string name="or">or</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="free_slots">Free Slots</string>
    <string name="reserve">Reserve this slot</string>
    <string name="SportTime">SportTime</string>
    <string name="catchphrase">Plan easy Play more</string>
    <string name="basket">Basket</string>
    <string name="football">Football</string>
    <string name="pingpong">Ping Pong</string>
    <string name="volleyball">Volleyball</string>
    <string name="skill_level_select">Select your skill level</string>
    <string name="friends">Friends</string>
    <string name="noFriends">You don\'t have any friends</string>
    <string name="invitations">Invitations</string>
    <string name="games">Games</string>
    <string name="addFriend">Add a friend</string>
    <string name="reservation">Reservation</string>
    <string name="participants">Participants</string>
    <string name="noRequests">You have no friend requests</string>
    <string name="cannotReserve">You cannot reserve a slot in the past</string>
    <string name="sendRequest">Send request</string>
    <string name="noFriendsFound">Nobody corresponds to these criteria: don\'t you feel a little picky?</string>
    <string name="sent_by">Sent by: </string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_invitations">No invitations found</string>
    <string name="requestSent">Request sent</string>
    <string name="search">Search</string>
    <string name="skill_name">Skill Name</string>
</resources>