<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profilePage"
        android:icon="@drawable/person_48px"
        android:title="@string/profile" />
    <item
        android:id="@+id/reservationsPage"
        android:icon="@drawable/event_48px"
        android:title="@string/reservations" />
    <item
        android:id="@+id/browsePage"
        android:icon="@drawable/language_48px"
        android:title="@string/browse" />

    <item
        android:id="@+id/oldReservations"
        android:icon="@drawable/history_48px"
        android:title="@string/oldReservations" />

        <!-- Altri elementi del menu... -->

        <group android:id="@+id/bottom_group">
            <!-- Elementi nella parte inferiore dello schermo -->
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout_48px"
                android:title="@string/logout" />
        </group>
</menu>