<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    tools:context=".LandingPageActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/sporttimelogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:text="@string/SportTime"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/catchphrase"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>